# desktop-stream

./: CMakeLists.txt
src/: capture_server.c  display_client.c
